upload model to adapter