@@ -1,22 +1,22 @@
 package de.fimatas.home.controller.domain.service;
 
-import java.util.Arrays;
+import de.fimatas.home.library.util.HomeAppConstants;
 import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.env.Environment;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.*;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.HttpServerErrorException;
 import org.springframework.web.client.ResourceAccessException;
 import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
-import de.fimatas.home.library.util.HomeAppConstants;
+
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @Component
 public class UploadService {
@@ -27,27 +27,34 @@ public class UploadService {
     @Autowired
     private Environment env;
 
-    private static Log log = LogFactory.getLog(UploadService.class);
+    private final static Log log = LogFactory.getLog(UploadService.class);
 
-    private long resourceNotAvailableCounter;
+    private final Map<String, Long> resourceNotAvailableCounter = new HashMap<>();
 
-    public void upload(Object object) {
+    public void uploadToClient(Object object) {
         String host = env.getProperty("client.hostName");
-        uploadBinary(host + "/upload" + object.getClass().getSimpleName(), object.getClass(), object);
+        uploadBinaryToClient(host + "/upload" + object.getClass().getSimpleName(), object, true);
     }
 
-    private <T> T uploadBinary(String url, T t, Object instance) {
+    @Async
+    public void uploadToAdapter(Object object) {
+        uploadBinaryToClient("http://localhost:8097/upload" + object.getClass().getSimpleName(), object, false);
+    }
+
+    private <T> void uploadBinaryToClient(String url, Object instance, boolean credentials) {
 
         HttpHeaders headers = new HttpHeaders();
-        headers.setAccept(Arrays.asList(MediaType.ALL));
+        headers.setAccept(List.of(MediaType.ALL));
         headers.setContentType(MediaType.APPLICATION_JSON);
         headers.set("Cache-Control", "no-cache");
-        headers.set(HomeAppConstants.CONTROLLER_CLIENT_COMM_TOKEN,
-            env.getProperty(HomeAppConstants.CONTROLLER_CLIENT_COMM_TOKEN));
 
-        String plainClientCredentials = env.getProperty("client.auth.user") + ":" + env.getProperty("client.auth.pass");
-        String base64ClientCredentials = new String(Base64.encodeBase64(plainClientCredentials.getBytes()));
-        headers.set("Authorization", "Basic " + base64ClientCredentials);
+        if(credentials) {
+            headers.set(HomeAppConstants.CONTROLLER_CLIENT_COMM_TOKEN,
+                    env.getProperty(HomeAppConstants.CONTROLLER_CLIENT_COMM_TOKEN));
+            String plainClientCredentials = env.getProperty("client.auth.user") + ":" + env.getProperty("client.auth.pass");
+            String base64ClientCredentials = new String(Base64.encodeBase64(plainClientCredentials.getBytes()));
+            headers.set("Authorization", "Basic " + base64ClientCredentials);
+        }
 
         try {
             @SuppressWarnings("unchecked")
@@ -55,30 +62,30 @@ public class UploadService {
             ResponseEntity<String> response = restTemplate.postForEntity(url, request, String.class);
             HttpStatus statusCode = response.getStatusCode();
 
-            connectionEstablishedLogging();
+            connectionEstablishedLogging(url);
             if (!statusCode.is2xxSuccessful()) {
                 LogFactory.getLog(UploadService.class).error("Could not successful upload data. RC=" + statusCode.value());
             }
 
         } catch (ResourceAccessException | HttpServerErrorException e) {
-            connectionNotEstablishedLogging(e);
+            connectionNotEstablishedLogging(url, e);
         }
-        return t;
     }
 
-    private void connectionNotEstablishedLogging(RestClientException e) {
-        resourceNotAvailableCounter++;
-        String suppressLogEntries = resourceNotAvailableCounter == 5 ? " NO FURTHER LOG ENTRIES WILL BE WRITTEN." : "";
-        if (resourceNotAvailableCounter < 4) {
-            log.warn("Could not upload state (#" + resourceNotAvailableCounter + "). "
+    private void connectionNotEstablishedLogging(String url, RestClientException e) {
+        resourceNotAvailableCounter.putIfAbsent(url, 0L);
+        resourceNotAvailableCounter.put(url, resourceNotAvailableCounter.get(url) + 1);
+        String suppressLogEntries = resourceNotAvailableCounter.get(url) == 5 ? " NO FURTHER LOG ENTRIES WILL BE WRITTEN." : "";
+        if (resourceNotAvailableCounter.get(url) < 4) {
+            log.warn("Could not upload state (#" + resourceNotAvailableCounter.get(url) + "). "
                 + (e.getMessage() != null ? e.getMessage().replace('\r', ' ').replace('\n', ' ') : "") + suppressLogEntries); // NOSONAR
         }
     }
 
-    private void connectionEstablishedLogging() {
-        if (resourceNotAvailableCounter > 0) {
-            log.warn("upload state successful after " + resourceNotAvailableCounter + " times.");
-            resourceNotAvailableCounter = 0;
+    private void connectionEstablishedLogging(String url) {
+        if (resourceNotAvailableCounter.containsKey(url) && resourceNotAvailableCounter.get(url) > 0) {
+            log.warn("upload state successful after " + resourceNotAvailableCounter.get(url) + " times.");
+            resourceNotAvailableCounter.put(url, 0L);
         }
     }
 
